# mcp_protector_proxy

./: .gitignore  README.md
.github/workflows/: test.yml
proxy_folder/: .gitignore  README.md  pyproject.toml
proxy_folder/mcp_security_proxy/: intermediate.py  sanitizer.py
sample_client/: .gitignore  README.md  client.py  pyproject.toml
sample_mcp/: .gitignore  README.md  http-server.py  pyproject.toml
