[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-mcp"
version = "0.1.0"
description = "A sample MCP project with an HTTP server script."
authors = [
  { name = "Andrew Wei" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "uvicorn",
  "mcp"
]

[tool.hatch.build.targets.wheel]
include = ["http-server.py"]

[project.scripts]
http-server = "http-server:main"
